# whatsapp_automation

./: .env.example  .gitignore  Procfile  README.md  WhatsApp Cloud API.postman_collection.json  alembic.ini  compose.yaml  pyproject.toml
.omc/: prd.json  progress.txt
.omc/research/: whatsapp_acknowledgment_best_practices.md  whatsapp_cloud_api_setup.md
.omc/scientist/reports/: 20260328_231134_whatsapp_cloud_api_research.md
alembic/: env.py
alembic/versions/: 20260311_0001_initial_schema.py  20260330_0002_portfolio_schema.py
src/whatsapp_automation/: __init__.py  agent.py  config.py  db.py  ingest.py  main.py  media.py  messaging.py  models.py  portfolio.py  schemas.py
tests/: conftest.py  test_portfolio.py  test_webhook.py
